--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=RestFul
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+## Set maximum file size
+spring.servlet.multipart.max-file-size=150MB
+## Set maximum request size
+spring.servlet.multipart.max-request-size=150MB
